@@ -31,4 +31,6 @@ Welcome to the Last Stand!
 [ 7/21/25 ]
 - Added Cooldown Multiplier and Cooldown Max Sandbox options.
 - Added check for ghost/invisible/dead for spawning / attraction system.
+- Added protection to spawning zombies on water.
+- Tied zombie count directly to spawned Zs.
 [ ------ ]
